# protox

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  codecov.yml
cli/: Cargo.toml  descriptor_set
cli/src/: config.rs  idl.rs  lang.rs  lang_config.rs  lang_option.rs  main.rs  options.rs  protoc.rs  run.rs  runner.rs
cli/src/run/: protoc_basic.rs  protoc_rust.rs
cli/tests/: protoc.rs  templates.rs  util.rs
cli/tests/resources/: example.proto  field.hbs
cli/tests/resources/template-b/: config.json  file.hbs
examples/: build.rs  (+4 more)
generator/: Cargo.toml
generator/src/: config.rs  dir_init.rs  encode.rs  encode_config.rs  extension_registry.rs  idl.rs  in_out_config.rs  in_out_generator.rs  lang.rs  lang_config.rs  lib.rs  render.rs  script_config.rs  template_init.rs  util.rs
generator/src/protoc/: input.rs  mod.rs  proto_rust.rs  protoc.rs
generator/src/renderer/: case.rs  mod.rs  option_key_value.rs  overlay_config.rs  proto.rs  renderer_config.rs
generator/src/renderer/context/: enum.rs  field.rs  file.rs  import.rs  message.rs  metadata.rs  mod.rs  option_key_value.rs  overlayed.rs  proto_type.rs
generator/src/renderer/scripted/: integration_tests.rs  mod.rs  renderer.rs
generator/src/renderer/scripted/api/: mod.rs  output.rs
generator/src/renderer/template/: mod.rs  renderer.rs
generator/src/scripted_renderer/: mod.rs  renderer.rs
generator/src/template_renderer/: extension_registry.rs  indent_helper.rs  mod.rs  option_key_value.rs  proto.rs  renderer.rs  renderer_config.rs
generator/src/template_renderer/context/: enum.rs  field.rs  file.rs  import.rs  message.rs  metadata.rs  mod.rs  proto_type.rs
generator/src/template_renderer/helper/: indent.rs
proto_options/: Cargo.toml  build.rs
proto_options/protos/: fbs.proto  idlx.fbs.proto  idlx.proto  protox.fbs.proto  protox.proto
proto_options/src/: fbs.rs  lib.rs
runner/: Cargo.toml
runner/src/: config.rs  idl.rs  lang.rs  lang_config.rs  lib.rs  template_config.rs  template_init.rs  util.rs
runner/src/generator/: client.rs  config.rs  context.rs  direct.rs  mod.rs  primitive.rs  proto.rs  renderer.rs  server.rs  template_config.rs
runner/src/generator/context/: field.rs  file.rs  message.rs  mod.rs  util.rs
runner/src/protoc/: builtin.rs  input.rs  mod.rs  proto.rs  proto_rust.rs  protoc.rs
runner/src/run/: client.rs  direct.rs  input.rs  mod.rs  proto.rs  protoc.rs  protoc_basic.rs  protoc_rust.rs  server.rs  util.rs
runner/src/template_renderer/: case.rs  mod.rs  primitive.rs  proto.rs  renderer.rs  renderer_config.rs
runner/src/template_renderer/context/: enum.rs  field.rs  file.rs  import.rs  message.rs  metadata.rs  mod.rs  proto_type.rs
(+70 files in other folders)
