[package]
name = "cli"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "struct-ffi-gen"
path = "src/main.rs"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
prost-build = "0.9.0"
clap = "3.0.0-beta.5"
anyhow = "1.0.49"
thiserror = "1.0.30"
walkdir = "2.3.0"

[dev-dependencies]
tempfile = "3.2.0"
