[package]
name = "generator"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.9"
# Using my branch of prost which has support for custom options.
# https://github.com/tokio-rs/prost/pull/591
prost = { git = "https://github.com/nswarm/prost", branch = "extensions" }
prost-types = { git = "https://github.com/nswarm/prost", branch = "extensions" }
prost-build = { git = "https://github.com/nswarm/prost", branch = "extensions" }
# Use specific clap because we use an unstable flag.
clap = { version = "=3.0.0", features = ["cargo", "unstable-grouped"] }
anyhow = "1.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "4.1"
tempfile = "3.2"
heck = "0.4"
proto_options = { path = "../proto_options" }
rhai = { version = "1.5", features = ["sync"] }
unindent = "0.1"
