[package]
name = "runner"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.9"
prost = "0.9"
prost-types = "0.9"
prost-build = "0.9"
clap = "3.0.0-beta.5"
anyhow = "1.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "4.1"

[dev-dependencies]
tempfile = "3.2"
